--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
     margin: 0;
     padding: 0;
 }
+
 .container {
-    position: relative;
     width: 1140px;
     margin: 0 auto;
 }
@@ -14,10 +14,12 @@
     background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
     padding: 39px 0 62px 0;
 }
+
 .logo .logo_img {
     display: block;
     margin: 0 auto;
 }
+
 .logo .logo_text {
     color: #FFF;
     text-align: center;
@@ -28,22 +30,23 @@
     text-transform: uppercase;
     margin-top: 14px;
 }
+
 h1 {
     margin-top: 53px;
 }
+
 .title {
     color: #F9BF3B;
     text-align: center;
     font-family: Roboto;
     font-size: 41px;
     font-weight: 900;
-    line-height: 41px;
     text-transform: uppercase;
 }
 
-h2.title {
+/* h2.title {
     margin-top: 30px;
-}
+} */
 
 .simple .title_big {
     color: #FFF;
@@ -51,9 +54,9 @@ h2.title {
     font-family: Roboto;
     font-size: 80px;
     font-weight: 900;
-    line-height: 80px;
+    /* line-height: 80px; */
     text-transform: uppercase;
-    margin-top: 21px;
+    /* margin-top: 21px; */
 }
 
 .promo .promo_text {
@@ -61,7 +64,7 @@ h2.title {
     margin-top: 23px;
     color: #FFF;
     text-align: center;
-    font-family: "Roboto Light";
+    font-family: Roboto;
     font-size: 21px;
     font-weight: 300;
     line-height: 28px;
@@ -69,43 +72,36 @@ h2.title {
 
 .promo .promo_text span {
     color: #F9BF3B;
-    font-family: "Roboto - Bold";
-    font-size: 21px;
     font-weight: 700;
-    line-height: 28px;
 }
 
-.promo .promo_btn, .gift .gift_btn  {
+.promo .promo_btn {
     display: block;
-    margin: 73px auto;
+    margin: 0 auto ;
+    margin-top: 70px;
     width: 313px;
     height: 72px;
-    background: linear-gradient(to top, #2798B9 0%, #3AB6DA 100%);
+    background: linear-gradient(0deg, #2798B9 0%, #3AB6DA 100%);
     box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
-    border: 4px solid rgba(0, 0, 0, 0.18);
+    border: none;
     color: #FFF;
     text-align: center;
-    font-family: "Roboto Condensed";
+    text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.22);
+    font-family: RobotoCondensed;
     font-size: 21px;
     font-weight: 400;
-    line-height: 24px;
+    line-height: 24px; /* 114.286% */
     text-transform: uppercase;
     cursor: pointer;
-    outline: none;
-}
-
-.gift .gift_btn {
-    margin-top: 53px;
 }
 
 .more {
-    margin-top: 73px;
+    margin-top: 72px;
 }
 
 .more .more_text {
     color: #FFF;
     text-align: center;
-    font-family: Roboto;
     font-size: 15px;
     font-weight: 100;
     text-transform: uppercase;
@@ -118,29 +114,26 @@ h2.title {
 }
 
 .waiting {
-    height: 607px;
     background-color: #EFEFEF;
+    height: 607px;
     padding: 85px 0 75px 0;
 }
 
-.waiting .waiting_header, .finish .finish_header {
+.waiting .waiting_header {
     color: #252525;
     text-align: center;
     font-family: Roboto;
     font-size: 30px;
     font-weight: 400;
+    line-height: 30px;
     text-transform: uppercase;
 }
 
-.finish .finish_header {
-    color: #FFF;
-}
-
-.waiting .waiting_divider, .finish .finish_divider {
+.waiting .waiting_divider {
     display: block;
     margin: 0 auto;
     width: 220px;
-    height: 5px;
+    height: 4px;
     background-color: #F9BF3B;
     margin-top: 18px;
 }
@@ -152,16 +145,17 @@ h2.title {
     font-family: Roboto;
     font-size: 23px;
     font-weight: 400;
+    line-height: 20px;
 }
 
 .waiting .waiting_wrapper {
     margin-top: 45px;
     display: flex;
-    justify-content: space-around;
-    align-items: top;
+    justify-content: space-between;
 }
 
 .waiting .waiting_wrapper .waiting_item {
+    
     width: 339px;
     text-align: center;
 }
@@ -171,189 +165,13 @@ h2.title {
 }
 
 .waiting .waiting_wrapper .waiting_item .waiting_descr {
-    margin-top: 26px;
     color: #4A4A4A;
     font-family: Roboto;
     font-size: 15px;
     font-weight: 300;
     line-height: 21px;
+    margin-top: 26px;
 }
-
-.optimization {
-    min-height: 550px;
-    padding: 102px 0 107px 0;
-}
-
-.optimization .optimization_header {
-    margin-left: 391px;
-    color: #299CBD;
-    font-family: Roboto;
-    font-size: 30px;
-    font-weight: 900;
-    line-height: 30px;
-    text-transform: uppercase;
-}
-
-.optimization .optimization_text {
-    color: #4A4A4A;
-    margin-left: 391px;
-    margin-top: 25px;
-    font-family: Roboto;
-    font-size: 17px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 27px;
-}
-
-.optimization .optimization_text span {
-    font-weight: 700;
-}
-
-.optimization .optimization_img {
-    position: absolute;
-    top: -54px;
-    left: -240px;
-    z-index: -1;
-}
-
-.finish {
-    min-height: 447px;
-    padding: 86px 0 79px 0;
-    background: url('../img/bg/second_bg.jpg') center center/cover no-repeat;
-}
-
-.finish .finish_wrapper {
-    margin-top: 41px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.finish .finish_wrapper .finish_item {
-    width: 204px;
-}
-
-.finish .finish_wrapper .finish_item .finish_round {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    width: 115px;
-    height: 115px;
-    background-color: #B4E2FF;
-    border-radius: 100%;
-}
-
-.finish .finish_wrapper .finish_item .finish_descr {
-    margin-top: 25px;
-    text-align: center;
-    color: #EFEFEF;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 17px;
-    font-weight: 300;
-    line-height: 20px;
-}
-
-.gift {
-    min-height: 631px;
-    padding: 88px 0 88px 0;
-    background-color: #EFEFEF;
-}
-
-.gift .gift_img {
-    display: block;
-    margin: 0 auto;
-}
-
-.gift .gift_descr {
-    margin-top: 45px;
-    color: #252525;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 43px; 
-}
-
-.vebinar {
-    min-height: 514px;
-    padding-top: 89px;
-}
-.vebinar .vebinar_img {
-    display: block;
-    margin: 0 auto;
-}
-.vebinar .vebinar_title {
-    margin-top: 36px;
-    color: #252525;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 30px;
-    font-weight: 400;
-    text-transform: uppercase;
-}
-.vebinar .vebinar_date {
-    margin-top: 36px;
-    color: #299CBD;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 36px;
-    font-weight: 900;
-    text-transform: uppercase;
-}
-.vebinar .vebinar_descr {
-    margin-top: 24px;
-    color: #4A4A4A;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 23px;
-    font-weight: 400;
-}
-.footer {
-    min-height: 169px;
-    padding-top: 57px;
-    background-color: #1A1A1A;
-}
-
-.footer .footer_wrapper {
-    display: flex;
-    width: 340px;
-    justify-content: space-around;
-    margin: 0 auto;
-    
-   
-}
-
-.footer .footer_wrapper .footer_link {
-    color: #888;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 15px;
-    font-weight: 300;
-
-}
-.footer .footer_wrapper .footer_divider {
-    
-    background-color: #888;
-    height: 16px;
-    width: 2px;
-}
-
-.footer .footer_tel {
-    color: #888;
-    text-align: center;
-    font-family: Roboto;
-    font-size: 15px;
-    font-weight: 300;
-  
-}
-
-.footer .footer_divider_r {
-    color: #888;
-    height: 10px;
-    width: 2px;  
-}
-
 
 
 
