--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 
 .container {
+    position: relative;
     width: 1140px;
     margin: 0 auto;
 }
@@ -75,7 +76,7 @@ h1 {
     font-weight: 700;
 }
 
-.promo .promo_btn {
+.promo .promo_btn, .gift .gift_btn {
     display: block;
     margin: 0 auto ;
     margin-top: 70px;
@@ -94,6 +95,11 @@ h1 {
     text-transform: uppercase;
     cursor: pointer;
 }
+
+.gift .gift_btn {
+    margin-top: 51px;
+}
+
 
 .more {
     margin-top: 72px;
@@ -119,7 +125,7 @@ h1 {
     padding: 85px 0 75px 0;
 }
 
-.waiting .waiting_header {
+.waiting .waiting_header, .finish .finish_header {
     color: #252525;
     text-align: center;
     font-family: Roboto;
@@ -129,7 +135,11 @@ h1 {
     text-transform: uppercase;
 }
 
-.waiting .waiting_divider {
+.finish .finish_header {
+    color: #EFEFEF;
+}
+
+.waiting .waiting_divider, .finish .finish_divider {
     display: block;
     margin: 0 auto;
     width: 220px;
@@ -173,6 +183,180 @@ h1 {
     margin-top: 26px;
 }
 
+.optimization {
+    min-height: 550px;
+    padding: 102px 0 107px 0;
+}
 
+.optimization .optimization_header {
+    margin-left: 391px;
+    color: #299CBD;
+    font-family: Roboto;
+    font-size: 28px;
+    font-weight: 800;
+    line-height: 30px; /* 100% */
+    text-transform: uppercase;
+}
 
+.optimization .optimization_text {
+    margin-top: 25px;
+    margin-left: 391px;
+    color: #4A4A4A;
+    font-family: Roboto;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 27px; /* 158.824% */
+}
+
+.optimization .optimization_text span {
+    font-weight: 700;
+}
+
+.optimization .optimization_img {
+    position: absolute;
+    top: -54px;
+    left: -240px;
+    z-index: -1;
+}
+
+.finish {
+    min-height: 447px;
+    padding: 86px 0 79px 0;
+    background: url('../img/bg/second_bg.jpg') center center/cover no-repeat;
+}
+
+.finish .finish_wrapper {
+    margin-top: 41px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.finish .finish_wrapper .finish_item {
+
+    
+    width: 204px;
+
+}
+
+.finish .finish_wrapper .finish_item .finish_round {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 118px;
+    height: 118px;
+    background-color: #B4E2FF;
+    border-radius: 100%;
+}
+
+.finish .finish_wrapper .finish_item .finish_descr {
+    margin-top: 25px;
+    text-align: center;
+    color: #EFEFEF;
+    font-family: Roboto;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.gift {
+    height: 631px;
+    padding: 88px 0;
+    background-color: #EFEFEF;
+}
+
+.gift .gift_img {
+    display: block;
+    margin: 0 auto;
+}
+
+.gift .gift_descr {
+    margin-top: 45px;
+    color: #252525;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 43px;
+}
+
+.vebinar {
+    min-height: 514px;
+    padding-top: 81px;
+}
+
+.vebinar .vebinar_img {
+    display: block;
+    margin: 0 auto;
+}
+
+.vebinar .vebinar_title {
+    margin-top: 36px;
+    color: #252525;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 30px; /* 100% */
+    text-transform: uppercase;
+}
+
+.vebinar .vebinar_date {
+    margin-top: 30px;
+    color: #299CBD;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-weight: 900;
+    line-height: 36px; /* 100% */
+    text-transform: uppercase;
+}
+
+.vebinar .vebinar_descr {
+    margin-top: 24px;
+    color: #4A4A4A;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.footer {
+    height: 169px;
+    background-color: #1A1A1A;
+    padding-top: 40px;
+}
+
+.footer .footer_wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 340px;
+    margin: 0 auto;
+   
+}
+
+.footer .footer_wrapper .footer_link {
+    color: #888;
+    font-family: Roboto;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 300;    
+}
+
+.footer .footer_wrapper .footer_divider {
+    width: 2px;
+    height: 16px;
+    background-color: #888;
+}
+
+.footer .footer_tel {
+    color: #888;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 300;
+    margin-top: 5px;
+}
 
